# ey

./: LICENSE  README.md  ey.py  setup.cfg  setup.py  test_ey.py
.circleci/: config.yml
examples/: calculate_dna_gcfraction.py  download_fasta.py  ey.py
ey/: __init__.py
tests/: test_ey.py
